Bug 113776 - [testcase] onchange event isn't fired after filling the text input using auto-fill list
Summary: [testcase] onchange event isn't fired after filling the text input using auto...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml forms (other bugs)
Version First Reported In: 3.4.1
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-10-03 14:56 UTC by Jiri Kaderavek
Modified: 2009-03-21 16:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
testcase file (74 bytes, text/html)
2006-09-06 15:40 UTC, Jiri Kaderavek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jiri Kaderavek 2005-10-03 14:56:13 UTC
Version:            (using KDE KDE 3.4.1)
Installed from:    Debian testing/unstable Packages

When you fill-in text input field, you can choose the value from the list of previously used values (auto-fill). In this case, the onchange event isn't fired in Konqueror 3.4.1. Manual filling has correct behaviour.
Comment 1 Jiri Kaderavek 2005-10-20 08:55:27 UTC
The title of this bug can be confusing. This problem has nothing to do with arrow keys and appears even if you use mouse to choose auto-fill value.
Comment 2 Philip Rodrigues 2006-09-06 15:31:18 UTC
Retitling to reflect comment #1. Can you provide a test URL or small testcase to show the problem?
Comment 3 Jiri Kaderavek 2006-09-06 15:40:06 UTC
Created attachment 17648 [details]
testcase file

Save this file and open it in Konqueror. Fill the input with some value and
press 'TAB' (you will see alert message). Then reload this page and _start_
filling the input with the same value as previously. To fill it completely use
auto-complete feature and then press 'TAB' (no alert in this case).
Comment 4 Hatto Von Hatzfeld 2006-11-21 14:31:19 UTC
Here is a test URL:

http://www.salesianer.de/util/onchangetest.html

I have seen this bug with Konqueror 3.5.1.
Microsoft Internet Explorer 6.0 SP2 has the same bug.
Firefox 1.5.0.8 does not have it.
Comment 5 Joseph Tate 2007-01-06 19:38:05 UTC
I confirm the behavior described.  The OnChange event gets skipped, you get the OnBlur, but the AutoComplete skips OnChange in a Text field.

Confirmed on KDE 3.5.4 and QT 3.3.6.
Comment 6 Philip Rodrigues 2007-01-06 19:41:35 UTC
Same here with r620k
Comment 7 Martin Fitzpatrick 2007-01-06 19:42:33 UTC
Confirmed using Hatto's test case on KDE/Konq 3.5.5 with Kubuntu 6.10.
Comment 8 FiNeX 2008-04-06 21:50:58 UTC
Confirmed even on KDE 4
Comment 9 Stas Verberkt 2009-03-07 17:32:23 UTC
SVN commit 936439 by sverberkt:

Also fire onChange events when using auto-completion.

BUG:113776


 M  +7 -0      render_form.cpp  
 M  +1 -0      render_form.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=936439
Comment 10 Maksim Orlovich 2009-03-21 16:26:19 UTC
SVN commit 942340 by orlovich:

Merged revision:r936439 | sverberkt | 2009-03-07 11:32:22 -0500 (Sat, 07 Mar 2009) | 4 lines

Also fire onChange events when using auto-completion.

BUG:113776

 M  +7 -0      render_form.cpp  
 M  +1 -0      render_form.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=942340