Also fire onChange events when using auto-completion.

BUG:113776

svn path=/trunk/KDE/kdelibs/; revision=936439